# zerobus-sdk-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NEXT_CHANGELOG.md  NOTICE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md  sdk-issue.md
.github/workflows/: push.yml  test.yml
.github/workflows/.github/workflows/: auto-pr.yml
examples/: README.md  basic_example.rs
examples/basic_example/: Cargo.toml  README.md
examples/basic_example/output/: orders.descriptor
examples/basic_example/src/: main.rs
examples/basic_example_json/: Cargo.toml
examples/basic_example_json/src/: main.rs
examples/basic_example_proto/: Cargo.toml
examples/basic_example_proto/output/: orders.proto  orders.rs
examples/basic_example_proto/src/: main.rs
sdk/: Cargo.toml  build.rs  zerobus_service.proto
sdk/src/: default_token_factory.rs  errors.rs  headers_provider.rs  landing_zone.rs  lib.rs  offset_generator.rs  stream_configuration.rs
tests/: Cargo.toml  build.rs
tests/src/: mock_grpc.rs  rust_tests.rs  utils.rs
tools/generate_files/: Cargo.toml  README.md  readme.md
tools/generate_files/src/: generate.rs  main.rs  token_factory.rs
