[package]
name = "databricks-zerobus-ingest-sdk"
version = "0.0.1"
authors = ["Databricks"]
edition = "2021"
license-file = "../LICENSE"
description = ""
repository = "https://github.com/databricks/zerobus-sdk-rs"

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"    
thiserror = "1.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-retry = "0.3"
tokio-stream = "0.1.16"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots", "transport"] }
tracing = "0.1.41"

[build-dependencies]
tonic-build = "0.12.3"
protoc-bin-vendored = "3.0.0"

[features]
testing = []
