[package]
name = "databricks-zerobus-ingest-sdk"
version = "0.1.1"
authors = ["Databricks"]
edition = "2021"
rust-version = "1.70"
license-file = "LICENSE"
description = "A high-performance Rust client for streaming data ingestion into Databricks Delta tables using the Zerobus service"
readme = "../README.md"
repository = "https://github.com/databricks/zerobus-sdk-rs"
keywords = ["databricks", "delta", "streaming", "ingestion", "zerobus"]
categories = ["database", "api-bindings"]
documentation = "https://docs.rs/databricks-zerobus-ingest-sdk"

[dependencies]
async-trait = "0.1"
prost = "0.14.1"
prost-types = "0.14.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"    
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tonic = { version = "0.14.2", features = ["tls-aws-lc", "transport", "tls-native-roots"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
testing = []
