[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "rust_tests"
path = "src/rust_tests.rs"

[dependencies]
prost = "0.13.3"
prost-reflect = "0.14"
prost-types = "0.13.3"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
tonic = { version = "0.12.3", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
databricks-zerobus-ingest-sdk = { path = "../sdk", features = ["testing"] }

[build-dependencies]
tonic-build = "0.12.3"
protoc-bin-vendored = "3.0.0"