[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "rust_tests"
path = "src/rust_tests.rs"

[dependencies]
async-trait = "0.1"
prost = "0.14.1"
prost-reflect = "0.16.2"
prost-types = "0.14.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
databricks-zerobus-ingest-sdk = { path = "../sdk", features = ["testing"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"