[package]
name = "tools"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
urlencoding = "2"
tonic-build = "0.12.3"
tempfile = "3.21.0"
prost = "0.12"
tonic = "0.12"

[build-dependencies]
protoc-bin-vendored = "3"